# Latency-Test

./: CMakeLists.txt  LICENSE  Latency-Test.aip  Latency-Test.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opengl_widget.cpp  opengl_widget.h
Latency_Hardware/: Latency_Tester_Hardware.docx
Latency_Hardware/OSVR_Latency_hardware_firmware/: OSVR_Latency_hardware_firmware.ino
Latency_Hardware/OSVR_Latency_hardware_firmware/Photodiode_latency_test/: Photodiode_latency_test.ino
Latency_Hardware/OSVR_Latency_hardware_firmware/Photosensor_latency_test/: Photosensor_latency_test.ino
Latency_Hardware/OSVR_Latency_hardware_firmware/motion_onset_test/: motion_onset_test.ino
Latency_Hardware/OSVR_Latency_hardware_firmware/motion_turnaround_test/: motion_turnaround_test.ino
Latency_Hardware/OSVR_Latency_hardware_firmware/print_analogs/: print_analogs.ino
Latency_Hardware/OSVR_Latency_hardware_firmware/print_inertial/: print_inertial.ino
Latency_Hardware/OSVR_Latency_hardware_firmware/print_photosensor/: print_photosensor.ino
Latency_Hardware/OSVR_Latency_hardware_firmware/streaming_reporter/: streaming_reporter.ino
